src/test/ui/span/mut-arg-hint.nll.stderr
error[E0596]: cannot borrow `*a` as mutable, as it is behind a `&` reference
  --> $DIR/mut-arg-hint.rs:3:9
   |
LL |     fn foo(mut a: &String) {
   |                   ------- help: consider changing this to be a mutable reference: `&mut std::string::String`
LL |         a.push_str("bar");
   |         ^ `a` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error[E0596]: cannot borrow `*a` as mutable, as it is behind a `&` reference
  --> $DIR/mut-arg-hint.rs:8:5
   |
LL | pub fn foo<'a>(mut a: &'a String) {
   |                       ---------- help: consider changing this to be a mutable reference: `&'a mut String`
LL |     a.push_str("foo");
   |     ^ `a` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error[E0596]: cannot borrow `*a` as mutable, as it is behind a `&` reference
  --> $DIR/mut-arg-hint.rs:15:9
   |
LL |     pub fn foo(mut a: &String) {
   |                       ------- help: consider changing this to be a mutable reference: `&mut std::string::String`
LL |         a.push_str("foo");
   |         ^ `a` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0596`.
